--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator.csproj
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\ToetsOpgave.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ToetsgeneratorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
