--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Web.config
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-D1-2_B2D3_Casus_Toetsgenerator-20190126050317.mdf;Initial Catalog=aspnet-D1-2_B2D3_Casus_Toetsgenerator-20190126050317;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DBContext" connectionString="data source=desktop-g6f6ass;initial catalog=ToetsgeneratorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBContext" connectionString="data source=desktop-DC25VU7;initial catalog=ToetsgeneratorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
